# tiny-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
cmake/: settings.cmake
tr/: CMakeLists.txt
tr/mesh/: CMakeLists.txt
tr/mesh/inc/point/: Point.hpp
tr/mesh/src/point/: Point.cpp
tr/model/: CMakeLists.txt
tr/model/inc/: Model.hpp
tr/model/src/: Model.cpp
tr/render/: CMakeLists.txt
tr/render/inc/: Renderer.hpp
tr/render/src/: Renderer.cpp
